--- a/multiple-linear-regression/mulitple_linear_regression.ipynb
+++ b/multiple-linear-regression/mulitple_linear_regression.ipynb
@@ -54,6 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Using ChatGPT for encoding logic\n",
     "def encodeCategoricalColumns(X):\n",
     "    # Step 1: Identify the categorical and numerical columns\n",
     "    categorical_columns = ['State']\n",
