--- a/multiple-linear-regression/mulitple_linear_regression.ipynb
+++ b/multiple-linear-regression/mulitple_linear_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9bc50ea8-9197-4d0f-a52f-678730cb6bfe",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "a66122e7-eb23-4aa2-892b-a08f645b5498",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "d1e5c8d5-78ce-4145-abb9-b57d551c2809",
    "metadata": {},
    "outputs": [],
@@ -35,21 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "d2bd9c39-c75c-4caa-821b-6c0b70441b69",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
-    "# labelencoder = LabelEncoder()\n",
-    "# X[: , 3] = labelencoder.fit_transform(X[ : , 3])\n",
-    "# onehotencoder = OneHotEncoder(categorical_features = [3])\n",
-    "# X = onehotencoder.fit_transform(X).toarray()"
+    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "e9a18e18-0b8a-468d-80ee-af88451fe201",
    "metadata": {},
    "outputs": [],
@@ -78,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "id": "c8d83f3f-e92e-4759-91d2-20d3becbef3b",
    "metadata": {},
    "outputs": [],
@@ -88,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "719d678a-7aa4-41af-ae67-4b15b56b29cd",
    "metadata": {},
    "outputs": [
@@ -579,7 +575,7 @@
        "49       0.00       116983.80         45173.06            0.0             0.0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "id": "514bbe8e-7ea8-4f57-a157-59cc8b816ac9",
    "metadata": {},
    "outputs": [],
@@ -600,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "id": "be5c2967-5708-437c-ad28-19e1c833cd16",
    "metadata": {},
    "outputs": [],
@@ -612,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "id": "bed22deb-f080-4f9c-8d0a-a5f7a3c25b20",
    "metadata": {},
    "outputs": [
@@ -1029,7 +1025,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,28 +1038,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "2c3cb8cd-3566-46ce-ba6a-ba0c63f42d7b",
+   "execution_count": null,
+   "id": "dc732368-17ef-47b0-a708-2b0ffc92a3cc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = regressor.predict(X_test)"
+    "# Predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
+   "id": "3c81c254-3085-4870-a187-02744c941b5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_train = regressor.predict(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "2c3cb8cd-3566-46ce-ba6a-ba0c63f42d7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_test = regressor.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "3d68efae-8b71-4c1b-a690-ba248ba1827e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Testing Squared Error"
+    "# Testing Squared Error "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4ece51c8-6383-47f8-8069-89ea1ac9f71a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Some inspiration from: https://tung-dn.github.io/prog_ML_reg1.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "bef6232c-1996-420d-b6e7-c8f9587a79ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_squared_error, r2_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "6565a254-c571-48eb-9060-fcbce4b27d37",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(553486567.4350456)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_squared_error(Y_train, y_pred_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "a82cea90-83d5-4328-8855-c31019cec5fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(1035292514.2063758)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_squared_error(Y_test, y_pred_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32617411-1a4c-4d53-b899-0635c76a1214",
    "metadata": {},
    "outputs": [],
    "source": []
