--- a/logistic-regression/logistic_regression.ipynb
+++ b/logistic-regression/logistic_regression.ipynb
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "24baef76-d107-416f-a7e5-241349d3dba2",
    "metadata": {},
    "outputs": [
@@ -575,7 +575,7 @@
     }
    ],
    "source": [
-    "# Recal\n",
+    "# Recall - Precision Curve\n",
     "from sklearn.metrics import PrecisionRecallDisplay\n",
     "\n",
     "display = PrecisionRecallDisplay.from_estimator(\n",
@@ -583,14 +583,6 @@
     ")\n",
     "_ = display.ax_.set_title(\"2-class Precision-Recall curve\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "af809556-f591-4dd1-8af1-2ec41dbd19de",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
